--- a/stucampus/templates/summer_plans/index.html
+++ b/stucampus/templates/summer_plans/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-CN" style="font-size: 14.56px;">
 <head>
 	<meta charset="UTF-8">
 	<title>{{ plan_category.name }}【深大学子天地】</title>
@@ -7,8 +7,7 @@
 	<link href="/static/images/stulogo.png" type="image/x-icon" rel="shortcut icon" />
 	{% load html_tools %}
 	{% load date_tools %}<!-- #用于算出距离现在的时间间隔,并处理姓名，学号-->
-	<link rel="stylesheet" href="/static/scripts/plugins/bootstrap2.3.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/static/scripts/plugins/bootstrap2.3.2/css/bootstrap-responsive.css">
+	<link rel="stylesheet" href="/static/scripts/plugins/bootstrap3/css/bootstrap.min.css">
 	{{ 'summer_plans/index.css' | as_css }}
 	{{ 'plugin/sweetalert/sweetalert.css' | as_css }}
 
@@ -17,74 +16,104 @@
 <body>
 	<div id="user_id" class="hide">{{request.session.szu_no}}</div>
 	<!-- 发表暑假计划的form Modal -->
-	<div id="form_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-			<h4 id="myModalLabel">发布你的{{ plan_category.name }}</h3>
-		</div>
-		<div class="modal-body">
-			<p id="plan_form_error"></p>
-			<form id="plan_form">
-			{% csrf_token %}
-			<p class="form_p"> <label for="id_content">计划:</label><textarea class="form-control" required="required" cols="40" id="id_content" name="content" placeholder="写下你的计划吧" rows="3" maxlength="1000"></textarea></p>
-			{% if not user.email %}
-			<p class="form_p">
-				<label for="id_email">邮箱:</label><input required="required" class="form-control" id="id_email" name="email" placeholder="在假期过后，我们将通过邮箱提醒您" type="email">
-			</p>
-			{% endif %}
-			<!-- <p class="form_p"></p> -->
-			<p class="form_inline"><label for="id_is_anon">匿名:</label> <input id="id_is_anon" name="is_anon" type="checkbox"><span id="alias_box" class="visi_hide"><input id="id_alias" maxlength="10" name="alias" type="text" placeholder="昵称"></span></p>
-			</form>				
-		</div>
-		<div class="modal-footer">
-			<button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
-			<button class="btn btn-primary" data-url="{% url 'summer_plans:add_plan' plan_category.english_name %}" id="submit_plan_form">Save</button>
-		</div>
-	</div>
+
+<!-- new -->
+
+<div class="modal fade" id="form_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">发布你的{{ plan_category.name }}</h4>
+      </div>
+      <div class="modal-body">
+
+      	<p id="plan_form_error"></p>
+      	<form id="plan_form">
+      		{% csrf_token %}
+      		<p class="row"><textarea class="form-control col-xs-12 col-md-12" required="required" cols="40" id="id_content" name="content" placeholder="写下你的计划吧" rows="3" maxlength="1000"></textarea></p>
+      		{% if not user.email %}
+      		<p class="row">
+      			<label for="id_email" class="col-xs-3 col-md-3">邮箱:</label><input required="required" class="form-control col-xs-9 col-md-9" id="id_email" name="email" placeholder="在假期过后，我们将通过邮箱提醒您" type="email">
+      		</p>
+      		{% endif %}
+      		<!-- <p class="form_p"></p> -->
+      		<p class="row "><label for="id_is_anon" class="col-xs-3 col-md-3">匿名:</label> <input id="id_is_anon" class="col-xs-2 col-md-2" name="is_anon" type="checkbox"><span id="alias_box" class="visi_hide"><input class="form-control col-xs-6 col-md-6" id="id_alias" maxlength="10" name="alias" type="text" placeholder="昵称"></span></p>
+      	</form>		
+
+
+      </div>
+      <div class="modal-footer">
+        <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+		<button class="btn btn-primary" data-url="{% url 'summer_plans:add_plan' plan_category.english_name %}" id="submit_plan_form">Save</button>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- new	 -->
+
+	
 	<!-- 发表暑假计划的form  Modal end-->
 
 	<!-- 搜索（Modal） start -->
-	<div id="search" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		<form id="search_form" action="{% url 'summer_plans:search' plan_category.english_name %}" method="GET">
-			<div class="modal-body">
-				<p class="form_p">
-					<label for="search_input">搜索:</label>
-					<input id="search_input" type="text" required="required" name="q" placeholder="搜索发布内容,姓名或昵称,学院">
-				</p>
-			</div>
-		<div class="modal-footer">
-			<button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
-			<button class="btn btn-primary" id="submit_search_form" type="submit">search</button>
-		</div>
-		</form>
-	</div>
-<!-- /搜索.modal end-->
-<!-- 感悟 modal 由函数调用 start -->
-	<div id="thought_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="thought" aria-hidden="true">
-		<div class="modal-body">
-			<div class="row">
-				<form id="thought_form">
-					{% csrf_token %}
-					<p id="thought_form_error"></p>
-					<div class="col-xs-12 col-sm-12 modal_form_box">
+	<!-- new	 -->
+	<div class="modal fade" id="search" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<form id="search_form" action="{% url 'summer_plans:search' plan_category.english_name %}" method="GET">
+					<div class="modal-body">
 						<p class="form_p">
-							 <textarea class="form-control" cols="40" id="id_thought" name="thought" placeholder="写下你的感悟" rows="10" required="required" maxlength="1000"></textarea>
-						</p>			
+							<label for="search_input">搜索:</label>
+							<input id="search_input" class="form-control" type="text" required="required" name="q" placeholder="搜索发布内容,姓名或昵称,学院">
+						</p>
+					</div>
+					<div class="modal-footer">
+						<button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+						<button class="btn btn-primary" id="submit_search_form" type="submit">search</button>
 					</div>
 				</form>
-			</div>	
+			</div>
 		</div>
-		<div class="modal-footer">
-			<button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
-			<button class="btn btn-primary" data-url="" id="submit_thought_form" >Save</button>
-		</div>
-		
 	</div>
+
+	<!-- new -->
+<!-- /搜索.modal end-->
+<!-- 感悟 modal 由函数调用 start -->
+	<!-- new -->
+<p class="hide" id="csrf_token">{% csrf_token %}</p>
+
+	<div class="modal fade" id="thought_modal" tabindex="-1" role="dialog" aria-labelledby="thought">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<form id="thought_form">
+					<div class="modal-body">
+						<p id="thought_form_error"></p>
+						{% csrf_token %}
+						<div class=" modal_form_box">
+							<p class="form_p">
+								<textarea class="form-control" cols="40" id="id_thought" name="thought" placeholder="写下你的感悟" rows="10" required="required" maxlength="1000"></textarea>
+							</p>			
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+						<button class="btn btn-primary" data-url="" id="submit_thought_form" >Save</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+
+	<!-- new -->
 <!-- 感悟.modal end-->
 	<main class="container">
 		<div >
 			<div class="col-lg-12 col-sm-12 ">
-				<header class="clearfix">	
+				<header class="clearfix">
+					<div class="clear"></div> 	
 					<div class="navbar clearfix">
 						<span class="pull-left">
 							<a href="/" class="logo">
@@ -94,28 +123,28 @@
 							<span class="theme_title">{{title}}</span>
 						</span>	
 						<span class="pull-right right_box">
-						<a href="#search" data-toggle="modal" class="function_btn"><i class="icon-search my_icon"></i> </a>
+						<a href="#search" data-toggle="modal" class="function_btn"><span class="glyphicon glyphicon-search my_icon"></span> </a>
 						<!-- 下拉框 start-->
 						<a id="dropdownMenu"  class="function_btn" data-toggle="dropdown">
-							<i class="icon-align-justify my_icon" ></i>
+							<span class="glyphicon glyphicon-align-justify my_icon" ></span>
 						</a>
 						<!-- 下拉按钮 -->
 						<ul class="dropdown-menu pull-right" role="menu" 
 						aria-labelledby="dropdownMenu">
 							{% if not request.session.szu_no %}
 							<li role="presentation">
-								<a role="menuitem" tabindex="-1" href="{% url 'summer_plans:add_plan' plan_category.english_name %}"><i class="icon-upload"></i> 登录</a>
+								<a role="menuitem" tabindex="-1" href="{% url 'summer_plans:add_plan' plan_category.english_name %}"><span class="glyphicon glyphicon-upload"></span> 登录</a>
 							</li>
 							<li role="presentation">
 								<a role="menuitem" tabindex="-1" href="{% url 'summer_plans:like_ranking_list' plan_category.english_name %}">
-								<i class="icon-hand-up"></i> 点赞排行
+								<span class="glyphicon glyphicon-hand-up"></span> 点赞排行
 								</a>
 							</li>
 
 							{% if plan_category.tip_time|time_to_on %}
 							<li role="presentation">
 								<a role="menuitem" tabindex="-1" href="{% url 'summer_plans:has_thought_plan_list' plan_category.english_name %}">
-									<i class="icon-pencil"></i> 计划感想
+									<span class="glyphicon glyphicon-pencil"></span> 计划感想
 								</a>
 							</li>
 							{% endif %}
@@ -123,31 +152,31 @@
 							
 							{% else %}
 							<li role="presentation">
-								<a href="#form_modal" class="form_modal_btn" tabindex="-1" role="button" class="btn" data-toggle="modal"><i class="icon-edit"></i> 发表计划
+								<a href="#form_modal" class="form_modal_btn" tabindex="-1" role="button" class="btn" data-toggle="modal"><span class="glyphicon glyphicon-edit"></span> 发表计划
 								</a>
 							</li>
 							<li role="presentation">
-								<a role="menuitem" tabindex="-1" href="{% url 'summer_plans:self_plan' plan_category.english_name request.session.szu_no %}"><i class="icon-user"></i> 我的计划</a>
+								<a role="menuitem" tabindex="-1" href="{% url 'summer_plans:self_plan' plan_category.english_name request.session.szu_no %}"><span class="glyphicon glyphicon-user"></span> 我的计划</a>
 							</li>
 							<li role="presentation">
 								<a role="menuitem" tabindex="-1" href="{% url 'summer_plans:like_ranking_list' plan_category.english_name %}">
-									<i class="icon-hand-up"></i>点赞排行
+									<span class="glyphicon glyphicon-hand-up"></span> 点赞排行
 								</a>
 							</li>
 							{% if plan_category.tip_time|time_to_on %}
 							<li role="presentation">
 								<a role="menuitem" tabindex="-1" href="{% url 'summer_plans:has_thought_plan_list' plan_category.english_name %}">
-									<i class="icon-pencil"></i> 计划感想
+									<span class="glyphicon glyphicon-pencil"></span> 计划感想
 								</a>
 							</li>
 							{% endif %}
 							<li role="presentation">
-								<a role="menuitem" tabindex="-1" href="{% url 'summer_plans:logout' plan_category.english_name %}"><i class="icon-off"></i> 登出</a>
+								<a role="menuitem" tabindex="-1" href="{% url 'summer_plans:logout' plan_category.english_name %}"><span class="glyphicon glyphicon-off"></span> 登出</a>
 							</li>
 							{% endif %}
 							{% if perms.summer_plans.send_email %}
 							<li role="presentation">
-								<a role="menuitem" tabindex="-1" href="{% url 'summer_plans:senf_email_to_plan_author' plan_category.english_name %}"><i class="icon-envelope"></i> 发送邮件通知</a>
+								<a role="menuitem" tabindex="-1" href="{% url 'summer_plans:senf_email_to_plan_author' plan_category.english_name %}"><span class="glyphicon glyphicon-envelope"></span> 发送邮件通知</a>
 							</li>
 							{% endif %}
 							
@@ -176,6 +205,20 @@
 
 							<span class="author_szu_org">from: {{ plan.author.szu_org_name }}</span>
 							<div class="plan_content">{{ plan.content |linebreaks }}</div>
+							{% if plan.plan_record.all %}
+							<div class="plan_record_content_box">
+								<p class="record_title">计划记录:</p>
+								{% for plan_record in plan.plan_record.all %}
+									<div class="plan_record">-----&nbsp&nbsp&nbsp{{plan_record.content}}</div>
+									<p class="plan_record_function">
+										<span class="plan_record_time">{{ plan_record.create_date|from_now }}</span>
+										{% ifequal plan.author.szu_no request.session.szu_no %}
+										<a class="delete_plan_record_btn" href="javascript:void(0);" data-url="{% url 'summer_plans:delete_plan_record' plan_category.english_name plan_record.pk %}">删除</a>
+										{% endifequal %}
+									</p>
+								{% endfor %}
+							</div>
+							{% endif %}
 							{% if plan.thought %} 
 							<p class="plan_thought_box">
 								<p class="thought_title">暑假过后:</p>
@@ -187,6 +230,8 @@
 									<span class="create_time">{{ plan.create_date |from_now }}</span>
 									{% ifequal plan.author.szu_no request.session.szu_no %}
 									<a class="delete_btn" href="javascript:void(0);" data-url="{% url 'summer_plans:delete' plan_category.english_name plan.pk %}">删除</a>
+
+									<a class="add_plan_record_btn" href="javascript:void(0);" data-url="{% url 'summer_plans:add_plan_record' plan_category.english_name plan.pk %}">记录进度</a>
 									{% endifequal %}
 								</span>
 								<span class="right_box pull-right">
@@ -198,7 +243,7 @@
 									
 									<img  class="loading visi_hide" id="like_loading{{plan.pk}}" src="/static/images/summer_plans/loading.gif" alt="loading">
 									
-									<span class="like_btn" data-url="{% url 'summer_plans:like' plan_category.english_name %}?plan_id={{plan.pk}}" data-plan_id="{{ plan.pk }}"><i class="icon-thumbs-up"></i></span>
+									<span class="like_btn" data-url="{% url 'summer_plans:like' plan_category.english_name %}?plan_id={{plan.pk}}" data-plan_id="{{ plan.pk }}"><span class="glyphicon glyphicon-thumbs-up"></span></span>
 								</span>
 							</div>
 							
@@ -226,7 +271,7 @@
 		</div>
 	</main>
 	{{ 'plugins/jquery.min.js' | as_js }}
-	{{ 'plugins/bootstrap2.3.2/js/bootstrap.min.js' | as_js }}
+	{{ 'plugins/bootstrap3/js/bootstrap.min.js' | as_js }}
 	{{ 'plugins/sweetalert/sweetalert.min.js' | as_js }}
 	{{ 'summer_plans/index.js' | as_js }}
 	<!-- 百度统计start -->
