--- a/stucampus/templates/summer_plans/index.html
+++ b/stucampus/templates/summer_plans/index.html
@@ -124,6 +124,18 @@
 						</span>	
 						<span class="pull-right right_box">
 						<a href="#search" data-toggle="modal" class="function_btn"><span class="glyphicon glyphicon-search my_icon"></span> </a>
+						<!-- xiala -->
+						<div class="dropdown">
+							<a class="dropdown-toggle" id="ddAction" data-toggle="dropdown" href=" ">
+								Action
+							</a>
+							<ul class="dropdown-menu" role="menu" aria-labelledby="ddaction">
+								<li role="presentation">
+									<a role="menuitem" tabindex="-1" href="http://www.google.com">Open Google</a>
+								</li>
+							</ul>
+						</div>
+						<!-- xiala -->
 						<!-- 下拉框 start-->
 						<a id="dropdownMenu"  class="function_btn" data-toggle="dropdown">
 							<span class="glyphicon glyphicon-align-justify my_icon" ></span>
