--- a/stucampus/templates/summer_plans/index.html
+++ b/stucampus/templates/summer_plans/index.html
@@ -126,7 +126,7 @@
 						<a href="#search" data-toggle="modal" class="function_btn"><span class="glyphicon glyphicon-search my_icon"></span> </a>
 						<!-- 下拉框 start-->
 						<span class="dropdown">
-							<a id="dropdownMenu"  class="function_btn dropdown-toggle" data-toggle="dropdown">
+							<a id="dropdownMenu"  class="function_btn dropdown-toggle" data-toggle="dropdown" href="#">
 								<span class="glyphicon glyphicon-align-justify my_icon" ></span>
 							</a>
 							<!-- 下拉按钮 -->
