--- a/stucampus/templates/summer_plans/index.html
+++ b/stucampus/templates/summer_plans/index.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+	<img src="/static/images/stulogo.png" width="0" height="0" />
 	<div id="user_id" class="hide">{{request.session.szu_no}}</div>
 	<!-- 发表暑假计划的form Modal -->
 
