--- a/stucampus/templates/dreamer/index.html
+++ b/stucampus/templates/dreamer/index.html
@@ -27,7 +27,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand EngName" data-menuanchor="page1" href="#page1">学子天地</a>
+            <a class="navbar-brand EngName" data-menuanchor="page1" href="#page1"><img src="/static/images/stucampus_logo.png"></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right" id="menu">
@@ -55,23 +55,11 @@
 <div id="resume">
     <div class="section item-1">
         <div class="row word">
-            <span class="resume-hide">学子天地</span>
+            <span class="resume-hide xuezititle">学子天地</span>
             <p class="motto resume-hide hinge-sty" style="position: relative">联结学子，创新天地。</p>
             <a href="#" class="next-page ">
                 <span class="glyphicon glyphicon-chevron-down"></span>
             </a>
-        </div>
-        <div class="corner1 corner">
-            <img src="/static/images/dreamer/images/page_home/1.png" alt=""/>
-        </div>
-        <div class="corner2 corner">
-            <img src="/static/images/dreamer/images/page_home/2.png" alt=""/>
-        </div>
-        <div class="corner3 corner">
-            <img src="/static/images/dreamer/images/page_home/3.png" alt=""/>
-        </div>
-        <div class="corner4 corner">
-            <img src="/static/images/dreamer/images/page_home/4.png" alt=""/>
         </div>
     </div>
     <div class="section item-6">
@@ -104,23 +92,23 @@
             <h class='hidden-xs hidden-sm page2-title'>基本部门</h>
             <div class="row">
                 <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
-                    <a href="#" onclick="introduce(1)"><img src="/static/images/dreamer/images/page-2/cb.png" alt="" ></a>
+                    <a href="#" class="act" onfocus="introduce(1)" id="cb"><img src="/static/images/dreamer/images/page-2/cb.png" alt="" ></a>
                     <h4>采编部</h4>
                 </div>
                 <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
-                    <a href="#" onclick="introduce(2)" ><img src="/static/images/dreamer/images/page-2/js.png" alt=""></a>
+                    <a href="#" class="act" onfocus="introduce(2)" id="js"><img src="/static/images/dreamer/images/page-2/js.png" alt=""></a>
                     <h4>技术部</h4>
                 </div>
                 <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
-                    <a href="#" onclick="introduce(3)"><img src="/static/images/dreamer/images/page-2/xz.png" alt=""></a>
+                    <a href="#" class="act" onfocus="introduce(3)" id="xz"><img src="/static/images/dreamer/images/page-2/xz.png" alt=""></a>
                     <h4>行政部</h4>
                 </div>
                 <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
-                    <a href="#" onclick="introduce(4)"><img src="/static/images/dreamer/images/page-2/sj.png" alt=""></a>
+                    <a href="#" class="act" onfocus="introduce(4)" id="sj"><img src="/static/images/dreamer/images/page-2/sj.png" alt=""></a>
                     <h4>设计部</h4>
                 </div>
                 <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
-                    <a href="#" onclick="introduce(5)"><img src="/static/images/dreamer/images/page-2/yy.png" alt=""></a>
+                    <a href="#" class="act" onfocus="introduce(5)" id="yy"><img src="/static/images/dreamer/images/page-2/yy.png" alt=""></a>
                     <h4>运营部</h4>
                 </div>
                 <div class="clear"></div>
