--- a/stucampus/static/styles/dreamer/css/page-6.css
+++ b/stucampus/static/styles/dreamer/css/page-6.css
@@ -3,7 +3,7 @@
 }
 
 .item-6 .top{
-    background: #16BA9D;
+    background: #5BC5BE;
     width: 100%;
     height: 50%;
     position: absolute;
@@ -13,7 +13,7 @@
 }
 
 .item-6 .foot{
-    background: #16BA9D;
+    background: #5BC5BE;
     width: 100%;
     height: 50%;
     position: absolute;
