--- a/stucampus/templates/dreamer/index.html
+++ b/stucampus/templates/dreamer/index.html
@@ -56,7 +56,7 @@
     <div class="section item-1">
         <div class="row word">
             <span class="resume-hide xuezititle">学子天地</span>
-            <p class="motto resume-hide hinge-sty" style="position: relative">联结学子，创新天地。</p>
+            <p class="motto resume-hide hinge-sty" style="position: relative">连结学子，创新天地。</p>
             <a href="#" class="next-page ">
                 <span class="glyphicon glyphicon-chevron-down"></span>
             </a>
