--- a/stucampus/templates/dreamer/index.html
+++ b/stucampus/templates/dreamer/index.html
@@ -56,7 +56,7 @@
     <div class="section item-1">
         <div class="row word">
             <span class="resume-hide xuezititle">学子天地</span>
-            <p class="motto resume-hide hinge-sty" style="position: relative">连结学子，创新天地。</p>
+            <p class="motto resume-hide hinge-sty" style="position: relative">连结学子 创新天地</p>
             <a href="#" class="next-page ">
                 <span class="glyphicon glyphicon-chevron-down"></span>
             </a>
@@ -92,23 +92,23 @@
             <h class='hidden-xs hidden-sm page2-title'>基本部门</h>
             <div class="row">
                 <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
-                    <a href="#" class="act" onfocus="introduce(1)" id="cb"><img src="/static/images/dreamer/images/page-2/cb.png" alt="" ></a>
+                    <a href="#" ><img class="act" onclick="introduce(1)" id="cb" src="/static/images/dreamer/images/page-2/cb.png" alt="" ></a>
                     <h4>采编部</h4>
                 </div>
                 <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
-                    <a href="#" class="act" onfocus="introduce(2)" id="js"><img src="/static/images/dreamer/images/page-2/js.png" alt=""></a>
+                    <a href="#" ><img class="act" onclick="introduce(2)" id="js" src="/static/images/dreamer/images/page-2/js.png" alt=""></a>
                     <h4>技术部</h4>
                 </div>
                 <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
-                    <a href="#" class="act" onfocus="introduce(3)" id="xz"><img src="/static/images/dreamer/images/page-2/xz.png" alt=""></a>
+                    <a href="#" ><img class="act" onclick="introduce(3)" id="xz" src="/static/images/dreamer/images/page-2/xz.png" alt=""></a>
                     <h4>行政部</h4>
                 </div>
                 <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
-                    <a href="#" class="act" onfocus="introduce(4)" id="sj"><img src="/static/images/dreamer/images/page-2/sj.png" alt=""></a>
+                    <a href="#" ><img class="act" onclick="introduce(4)" id="sj" src="/static/images/dreamer/images/page-2/sj.png" alt=""></a>
                     <h4>设计部</h4>
                 </div>
                 <div class=" icon-infomation col-xs-6 col-sm-6 col-md-3">
-                    <a href="#" class="act" onfocus="introduce(5)" id="yy"><img src="/static/images/dreamer/images/page-2/yy.png" alt=""></a>
+                    <a href="#" ><img class="act" onclick="introduce(5)" id="yy" src="/static/images/dreamer/images/page-2/yy.png" alt=""></a>
                     <h4>运营部</h4>
                 </div>
                 <div class="clear"></div>
