--- a/stucampus/static/scripts/dreamer/lib/bootstrap/css/bootstrap.css
+++ b/stucampus/static/scripts/dreamer/lib/bootstrap/css/bootstrap.css
@@ -1420,7 +1420,7 @@ textarea {
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
-    font-size: 18px;
+    font-size: 18px !important;
 }
 
 a {
