首页添加报名入口

--- a/stucampus/templates/base.html
+++ b/stucampus/templates/base.html
@@ -80,6 +80,7 @@
                     <li><a id="nav2" href="javascript:void(0)" onclick="navcome(2);" tarurl="{% url 'articles:list' 'interesting' %}"><span class="interesting"></span>趣物志</a></li>
                     <li ><a id="nav3" href="javascript:void(0)" onclick="navcome(3);" tarurl="{% url 'articles:list' 'news' %}"><span class="news"></span>新闻和通知</a></li>
                     <li><a id="nav4" href="javascript:void(0)" onclick="navcome(4);" tarurl="http://stu.szu.edu.cn:8080/"><span class="serv"></span>服务专区</a></li>
+                    <li><a id="nav5" href="javascript:void(0)" onclick="navcome(5);" tarurl="{% url 'dreamer:joinus' %}"><span class="joinus"></span>加入我们</a></li>
                     <li class="now"></li>
                 </ul>
             </div>
