压缩图片并将图片背景区域修改至body

--- a/stucampus/static/styles/base.css
+++ b/stucampus/static/styles/base.css
@@ -5,6 +5,8 @@
 
 body{
 	background-color: #eaf4fc;
+        background: url(/static/images/index/national_bgc.png) fixed no-repeat;
+        background-size: cover;
 }
 
 .header{
