--- a/stucampus/static/styles/bases.css
+++ b/stucampus/static/styles/bases.css
@@ -5,6 +5,8 @@
 }
 body{
     background-color: #eee;
+    background:url(/static/images/index/national_bgc.png) fixed no-repeat;
+    background-size:cover;
 }
 @media screen and (max-width: 767px){
 	@media screen and (max-width: 640px){
@@ -281,9 +283,7 @@ body{
 	.inner_content{
 	    margin-top: 1.733333rem;
 	    overflow: hidden;
-            background:url('/static/images/index/national_bgc.png') fixed no-repeat;
-            background-size:cover;
-	}
+        }
 	.clear-margin{
 		margin: 0 !important;
 	}
