--- a/stucampus/static/styles/bases.css
+++ b/stucampus/static/styles/bases.css
@@ -33,7 +33,7 @@ body{
 	    left: 0;
 	    height: 3.466667rem;
 	    width: 100%;
-	    background-color: #5BC5BE;
+	    background-color: /*#5BC5BE;*/ #ed4520;
 	    box-shadow: 0 0.2rem 0.2rem rgba(0,0,0,0.16);
 	    z-index: 999;
 	}
@@ -325,12 +325,12 @@ body{
 	    float: left;
 	}
 	.nav-active{
-	    color: #5BC5BE !important;
+	    color: /*#5BC5BE*/ #ed4520 !important;
 	}
 	.now{
 	    position: absolute;
 	    height: 1.6rem !important;
-	    border-bottom: 4px solid #5BC5BE;
+	    border-bottom: 4px solid /*#5BC5BE*/ #ed4520;
 	    transition: left 0.3s ease-in-out;
 	    -moz-transition: left 0.3s ease-in-out; /* Firefox 4 */
 	    -webkit-transition: left 0.3s ease-in-out; /* Safari 和 Chrome */
